# id-translation-project

./: .buildinfo  .gitignore  LICENSE.md  README.md  api.html  cookiecutter.json  cookiecutter_extensions.py  generate-project.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.doctrees/_autosummary/: big_corporation_inc.id_translation.config.doctree  big_corporation_inc.id_translation.customization.doctree  big_corporation_inc.id_translation.singleton.doctree
.doctrees/api/: big_corporation_inc.id_translation.config.doctree  big_corporation_inc.id_translation.customization.doctree  big_corporation_inc.id_translation.singleton.doctree
.github/: dependabot.yml
.github/workflows/: demo-project.yml  documentation.yml  tests.yml
.run/: generate-project.run.xml
_autosummary/: big_corporation_inc.id_translation.config.html  big_corporation_inc.id_translation.customization.html  big_corporation_inc.id_translation.singleton.html
_downloads/f78f968ac785e2c7ef7cf52562d8ee82/: transactions.csv
_sources/: api.rst.txt  index.rst.txt
_sources/_autosummary/: big_corporation_inc.id_translation.config.rst.txt  big_corporation_inc.id_translation.singleton.rst.txt
_sources/api/: big_corporation_inc.id_translation.config.rst.txt  big_corporation_inc.id_translation.customization.rst.txt  big_corporation_inc.id_translation.singleton.rst.txt
api/: big_corporation_inc.id_translation.config.html  big_corporation_inc.id_translation.customization.html  big_corporation_inc.id_translation.singleton.html
demo/: replay.json
demo/bci-id-translation/: .gitignore  GETTING_STARTED.md  README.md  demo-notebook.ipynb  pyproject.toml  pytest.ini  setup-and-verify.sh  verify-demo-project.sh
demo/bci-id-translation/docs/: api.rst  conf.py  example.py  index.rst
demo/bci-id-translation/src/big_corporation_inc/id_translation/: __init__.py  _configure.py  _initialize.py  _translate.py  config.py  customization.py
demo/bci-id-translation/src/big_corporation_inc/id_translation/config/: main.toml  metaconf.toml
demo/bci-id-translation/src/big_corporation_inc/id_translation/config/fetching/: dvd-rental-store.toml  geography.toml
demo/bci-id-translation/src/big_corporation_inc/id_translation/config/fetching/inactive/: csv-files-in-s3.toml  override-only.toml
demo/bci-id-translation/src/big_corporation_inc/id_translation/singleton/: __init__.py  _singleton.py  _wrap.py  _wrappers.py
demo/bci-id-translation/tests/: conftest.py  test_basics.py  test_demo_some_things.py
demo/bci-id-translation/tests/id_translation/: __init__.py  test_basics.py  test_demo_some_things.py
demo/ute-id-translation/: README.md  pyproject.toml
demo/ute-id-translation/src/ute/id_translation/: __init__.py  _initialize.py  _translate.py  config.py  customization.py
demo/ute-id-translation/src/ute/id_translation/config/: main.toml
demo/ute-id-translation/src/ute/id_translation/config/fetching/: dvd-rental-store.toml  geography.toml
demo/ute-id-translation/src/ute/id_translation/config/fetching/inactive/: README.txt  csv-files-in-s3.toml  override-only.toml
demo/ute-id-translation/tests/: test_basics.py  test_demo_some_things.py
dev/: generate-project.sh  lint.sh  manual.json  manual.sh
hooks/: post_gen_project.py
tests/: test_bake_project.py
tests/replay/: default.json  master.json  stable.json
{{cookiecutter.project_slug}}/: GETTING_STARTED.md  README.md  demo-notebook.ipynb  pyproject.toml  pytest.ini  setup-and-verify.sh  verify-demo-project.sh
{{cookiecutter.project_slug}}/docs/: api.rst  conf.py  example.py  index.rst  translated-transactions.csv
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}/id_translation/: __init__.py  _configure.py  _initialize.py  _translate.py  config.py  customization.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}/id_translation/config/: main.toml  metaconf.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}/id_translation/config/fetching/: dvd-rental-store.toml  geography.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}/id_translation/config/fetching/inactive/: README.txt  csv-files-in-s3.toml  override-only.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}/id_translation/singleton/: __init__.py  _singleton.py  _wrap.py  _wrappers.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_basics.py  test_demo_some_things.py
{{cookiecutter.project_slug}}/tests/id_translation/: conftest.py  test_basics.py  test_demo_some_things.py
