[tool.poetry]
name = "id-translation-project"
version = "0.0.0"
description = "A cookiecutter for creating specialized ID translation packages."
authors = ["Richard Sundqvist <richard.sundqvist@live.se>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
pytest = "~8.1.1"
ruff = "~0.11.12"
directory-tree = "==0.0.4"
cookiecutter = "~2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
