[project]
name = "id-translation-project"
version = "0.0.0"
description = "A cookiecutter for creating specialized ID translation packages."
authors = [{ name = "Richard Sundqvist", email = "richard.sundqvist@live.se" }]
requires-python = ">= 3.11"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "ruff~=0.15.5",
    "cookiecutter~=2.7.1",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
