[project]
name = "bci-id-translation"
version = "0.1.0"
description = "Translation of IDs found in Big Corporation Inc. databases."
authors = [
    { name = "Richard Sundqvist", email = "richard.sundqvist@live.se" },
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "id-translation[fetching] (>=1.2.0,<2.0.0)"
]


[project.entry-points."id_translation.dio"]
# See https://id-translation.readthedocs.io/en/stable/api/id_translation.dio.html#user-defined-integrations
# name_doesnt_matter = "big_corporation_inc.id_translation.submodule:MyDataStructureIO"


[dependency-groups]
test = [
    "pytest~=9.0.2",
    "mypy~=1.19.1",
    "ruff~=0.15.5",
    # Demo dependencies
    "pg8000 ~= 1.31.5"  # src/big_corporation_inc/id_translation/config/fetching/dvd-rental-store.toml
    # s3fs = "~2025.9.0"  # src/big_corporation_inc/id_translation/config/fetching/inactive/csv-files-in-s3.toml
]
docs = [
    "sphinx~=8.2.3",
    "pydata-sphinx-theme~=0.16.1",
]
types = [
    "pandas-stubs",
    "types-greenlet",
    "scipy-stubs",
    "types-openpyxl",
    "types-python-dateutil",
    "types-xlrd",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = "big_corporation_inc.id_translation"

[tool.pytest.ini_options]
filterwarnings = []
log_file_level = 10
log_level = 10
log_file = "pytest.log"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.mypy]
install_types = true
check_untyped_defs = true
always_true = ["ID_TRANSLATION_PANDAS_IS_TYPED"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
