[tool.poetry]
name = "ute-id-translation"
version = "0.2.0"
description = "Translation of IDs found in Unit Testing Enthusiasts databases."
authors = ["Richard Sundqvist <richard.sundqvist@live.se>"]
readme = "README.md"
packages = [{ include = "ute", from = "src" }]

[tool.poetry.dependencies]
python = "<4,>=3.8"

id-translation = "~0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"  #  A pure-Python PostgreSQL driver .
pg8000 = "^1.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
